--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
----
-# You don't need to edit this file, it's empty on purpose.
-# Edit theme's home layout instead if you wanna make some changes
-# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: home
-author_profile: true
----
+<head>
+  <title>CogSciDigHum: GPS demo</title>
+</head>
+<body>
+<iframe
+	src="http://curve.fit"
+	frameborder="0"
+	width="850"
+	height="450"
+></iframe>
+</body>
