--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
   <title>CogSciDigHum: GPS demo</title>
 </head>
@@ -9,3 +11,4 @@
 	height="450"
 ></iframe>
 </body>
+</html>
