--- a/index.html
+++ b/index.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="importmap">
-            { "imports": {
-                "polyscript": "https://esm.sh/polyscript@0.3.8"
-            } }
-          </script>
+        <h1>Sandbox</h1>
     </head>
     <body>
         <script type="module">
-            import {PyMainThreadSandbox} from "/dist/index.esm.js";
-            const sandbox = new PyMainThreadSandbox({ jsApi: { getJsValue: () => 'value from js' }, modules: { "foo.py": `
-import js
-import pysandbox
-
-def custom_display(target):
-    pysandbox.display(js.getJsValue(), target)
-` }});
-            await sandbox.init();
-            await sandbox.exec("import foo\nfoo.custom_display(current_target())", 'out');
+          import { PyMainThreadSandbox } from "https://esm.sh/pysandbox@0.3.1/";
+          const sandbox = new PyMainThreadSandbox();
+          await sandbox.init();
+          await sandbox.exec("display('Hello', target=current_target())", "output");
         </script>
+        <div id="output"></div>
         <div id="out"></div>
     </body>
 </html>
