--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
           import { PyMainThreadSandbox } from "https://esm.sh/pysandbox@0.3.1/";
           const sandbox = new PyMainThreadSandbox();
           await sandbox.init();
-          await sandbox.exec("display('Hello World', target=current_target())", "output");
+          as=input()
+          await sandbox.exec("display(as, target=current_target())", "output");
         </script>
         <div id="output"></div>
         <div id="out"></div>
