--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <h1>Sandbox</h1>
+        <title>Inpout2 Demo</title>
+        <script defer src="https://pyscript.net/releases/2022.12.1/pyscript.js"></script>
+        <link rel="stylesheet" href="https://pyscript.net/releases/2022.12.1/pyscript.css">
     </head>
     <body>
         <script type="module">
           import { PyMainThreadSandbox } from "https://esm.sh/pysandbox@0.3.1/";
           const sandbox = new PyMainThreadSandbox();
+          var ax= new string
           await sandbox.init();
-          as=input()
+          await sandbox.exec("input (ax));
           await sandbox.exec("display(as, target=current_target())", "output");
         </script>
         <div id="output"></div>
