--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
         <link rel="stylesheet" href="https://pyscript.net/releases/2022.12.1/pyscript.css">
     </head>
     <body>
+        <py-script>
+            ax=input()
+        </py-script>
         <script type="module">
           import { PyMainThreadSandbox } from "https://esm.sh/pysandbox@0.3.1/";
           const sandbox = new PyMainThreadSandbox();
-          var ax= new string
           await sandbox.init();
-          await sandbox.exec("input (ax));
-          await sandbox.exec("display(as, target=current_target())", "output");
+          await sandbox.exec("display(ax, target=current_target())", "output");
         </script>
         <div id="output"></div>
         <div id="out"></div>
