--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <body>
         <py-script>
             ax=input()
+            display ("Hi ", ax)
         </py-script>
         <script type="module">
           import { PyMainThreadSandbox } from "https://esm.sh/pysandbox@0.3.1/";
           const sandbox = new PyMainThreadSandbox();
           await sandbox.init();
-          await sandbox.exec("display(ax, target=current_target())", "output");
+          await sandbox.exec("display("Hellow dWorld!", target=current_target())", "output");
         </script>
         <div id="output"></div>
         <div id="out"></div>
