--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
     <head>
         <title>Inpout2 Demo</title>
     </head>
-    <body>
+     <body>
         <script type="module">
           import { PyMainThreadSandbox } from "https://esm.sh/pysandbox@0.3.1/";
           const sandbox = new PyMainThreadSandbox();
           await sandbox.init();
-          await sandbox.exec("display("Hellow dWorld!", target=current_target())", "output");
+          await sandbox.exec("display('Hello', target=current_target())", "output");
         </script>
         <div id="output"></div>
-        <div id="out"></div>
     </body>
 </html>
