--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Inpout2 Demo</title>
     </head>
      <body>
+        <input type="text" id="name1" name="Name1">
         <script type="module">
           import { PyMainThreadSandbox } from "https://esm.sh/pysandbox@0.3.1/";
           const sandbox = new PyMainThreadSandbox();
