--- a/sandsimp.html
+++ b/sandsimp.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
     <head>
         <script type="importmap">
@@ -9,10 +8,16 @@
     </head>
     <body>
         <script type="module">
-            import {PyMainThreadSandbox} from "/dist/index.esm.js";
-            const sandbox = new PyMainThreadSandbox();
+            import {PyWorkerSandbox} from "/dist/index.esm.js";
+            const sandbox = new PyWorkerSandbox({ jsApi: { getJsValue: () => 'value from js' }, modules: { "foo.py": `
+import js
+import pysandbox
+
+def custom_display(target):
+    pysandbox.display(js.getJsValue(), target)
+` }});
             await sandbox.init();
-            await sandbox.exec("import js\njs.document.getElementById('out').innerText = 'success'");
+            await sandbox.exec("import foo\nfoo.custom_display(current_target())", 'out');
         </script>
         <div id="out"></div>
     </body>
