--- a/sandsimp.html
+++ b/sandsimp.html
@@ -48,11 +48,11 @@
 
     generate.addEventListener("click", async () =>{
         try {
-            const textInput = inputText.value;
+            //const textInput = inputText.value;
 
-            const app = await client("https://ifeanyi-promptgenerator.hf.space/");
-            const result = await app.predict("/predict", [      
-            textInput, // string  in 'prompt' Textbox component
+            //const app = await client("https://ifeanyi-promptgenerator.hf.space/");
+            //const result = await app.predict("/predict", [      
+            //textInput, // string  in 'prompt' Textbox component
             //me start
             
             const response_0 = await fetch("https://raw.githubusercontent.com/gradio-app/gradio/main/test/test_files/bus.png");
