--- a/sandsimp.html
+++ b/sandsimp.html
@@ -67,8 +67,8 @@
             console.log(result2.data);
 
             //me end
-        ]);
-            prompt_holder.textContent = result.data;            
+            ]);
+            //prompt_holder.textContent = result.data;            
 
             } catch (error){
                  console.log("Error:",error.message);         
