--- a/sandsimp.html
+++ b/sandsimp.html
@@ -64,7 +64,7 @@
                             "Howdy!", // string  in 'User' Textbox component
                 ]);
             
-            console.log(result2.data);
+            //console.log(result2.data);
 
             //me end
             ]);
