--- a/sandsimp.html
+++ b/sandsimp.html
@@ -64,10 +64,10 @@
                             "Howdy!", // string  in 'User' Textbox component
                 ]);
             
-            //console.log(result2.data);
+            console.log(result2.data);
 
             //me end
-            ]);
+            //]);
             //prompt_holder.textContent = result.data;            
 
             } catch (error){
