--- a/sandsimp.html
+++ b/sandsimp.html
@@ -59,9 +59,9 @@
             
             //import { client } from "@gradio/client";
             
-            const app = await client("https://osaaso-aj-rick-discord-bot.hf.space/");
+            const app = await client("https://osaaso-ytscrap.hf.space/");
             const result = await app.predict("/predict", [		
-            				"Howdy!", // string  in 'parameter_6' Textbox component
+            				"Howdy!", // string  in 'link' Textbox component
             	]);
 
 
