--- a/sandsimp.html
+++ b/sandsimp.html
@@ -67,8 +67,9 @@
 
             //me end
             //]);
+            alert (result.data)
             prompt_holder.textContent = result.data;            
-            console.log("noError:",result.data);         
+            //console.log("noError:",result.data);         
             } 
         catch (error){
                  console.log("Error:",error.message);         
