--- a/sandsimp.html
+++ b/sandsimp.html
@@ -67,8 +67,8 @@
 
             //me end
             //]);
-            alert (result.data)
-            prompt_holder.textContent = result.data;            
+            document.write (result.data)
+            //prompt_holder.textContent = result.data;            
             //console.log("noError:",result.data);         
             } 
         catch (error){
