--- a/csdhcel.html
+++ b/csdhcel.html
@@ -35,5 +35,10 @@
         display (result)
         print("views: ", result)
     </py-script>
+    <p id="demo"></p>
+
+    <script>
+        document.getElementById("demo").innerHTML = result.data;
+    </script>
 </body>
 </html>
