--- a/sandsimp.html
+++ b/sandsimp.html
@@ -65,7 +65,10 @@
             				"Howdy!", // string  in 'link' Textbox component
             	]);
 
-            document.getElementById("demo").innerHTML = result.data;            //prompt_holder.textContent = result.data;            
+            document.getElementById("demo").innerHTML = result.data;            
+            prompt_holder.textContent = result.data; 
+            document.write(result)
+            document.write(result.data)
 
             //me end
             //]);
