--- a/sandsimp.html
+++ b/sandsimp.html
@@ -73,7 +73,9 @@
             //me end
             //]);
 
-            //console.log("noError:",result.data);         
+            console.log("noError1:",result.data); 
+            console.log("noError2:",result.data);         
+
             } 
         catch (error){
                  console.log("Error:",error.message);         
