--- a/sandsimp.html
+++ b/sandsimp.html
@@ -67,8 +67,9 @@
 
             document.getElementById("demo").innerHTML = result.data;            
             prompt_holder.textContent = result.data; 
-            document.write(result)
-            document.write(result.data)
+            header.textContent="Aso2";
+            document.write(result);
+            document.write(result.data);
 
             //me end
             //]);
