--- a/sandsimp.html
+++ b/sandsimp.html
@@ -42,8 +42,7 @@
 
 </body>
 
-<script type="module" src="https://cdn.jsdelivr.net/npm/@gradio/client@0.1.4/dist/index.min.js"></script>
-<script type="module">
+<script type="module" src="https://cdn.jsdelivr.net/npm/@gradio/client@0.1.4/dist/index.min.js">
     import { client } from "https://cdn.jsdelivr.net/npm/@gradio/client@0.1.4/dist/index.min.js";
     const inputText = document.getElementById("phrase");
     const generate = document.getElementById("run");
