--- a/csdhcel.html
+++ b/csdhcel.html
@@ -50,7 +50,7 @@
         try {
             const textInput = inputText.value;
 
-            const app = await client("https://ifeanyi-promptgenerator.hf.space/");
+            const app = await client("https://osaaso-ytscrap.hf.space");
             const result = await app.predict("/predict", [      
             textInput, // string  in 'prompt' Textbox component
         ]);
