--- a/csdhcel.html
+++ b/csdhcel.html
@@ -33,7 +33,7 @@
     <div id="header"></div>
     <h3><strong>uTube!</strong></h3>
     <br><br>
-    <div id="text-input"><input type="text" title="Starting Phrase" id="phrase" placeholder="Enter phrase here"></div>
+    <div id="text-input"><input type="text" title="uTube Link" id="phrase" placeholder="https://youtu.be/vQUCSHUlN-k"></div>
     <br><br><br><br>
     <button id="run"><strong>Scrape</strong></button>
     <br><br><br><br><br>
