--- a/csdhcel.html
+++ b/csdhcel.html
@@ -60,7 +60,7 @@
             const result = await app.predict("/predict", [      
             textInput, // string  in 'prompt' Textbox component
         ]);
-            prompt_holder.textContent = result.data['views'];            
+            prompt_holder.textContent = result['views'];            
 
             } catch (error){
                  console.log("Error:",error.message);         
