--- a/csdhcel.html
+++ b/csdhcel.html
@@ -62,7 +62,7 @@
         try {
             const textInput = inputText.value;
 
-            var img = document.createElement("iframe");
+            var iframe = document.createElement("iframe");
             iframe.src =textInput;
             var src = document.getElementById("headerVideo");
             src.appendChild(iframe);
