--- a/csdhcel.html
+++ b/csdhcel.html
@@ -63,7 +63,7 @@
             const textInput = inputText.value;
 
             var iframe = document.createElement("iframe");
-            iframe.src =textInput;
+            iframe.src =inputText.value;
             var src = document.getElementById("headerVideo");
             src.appendChild(iframe);
             
