--- a/csdhcel.html
+++ b/csdhcel.html
@@ -62,10 +62,10 @@
         try {
             const textInput = inputText.value;
 
-            var iframe = document.createElement("iframe");
-            iframe.src =inputText.value;
+            var iframe2 = document.createElement("iframe");
+            iframe2.src =inputText.value;
             var src = document.getElementById("headerVideo");
-            src.appendChild(iframe);
+            src.appendChild(iframe2);
             
 
             const app = await client("https://osaaso-ytscrap.hf.space");
