--- a/csdhcel.html
+++ b/csdhcel.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prompt Generator</title>
+    <title>CSDH uTuber!</title>
+    <div id="headerVideo" ></div>
+
     
     <style>
         body {
@@ -32,7 +34,6 @@
 </head>
 <body>
     <div id="headerImg"></div>
-    <div id="headerVideo"></div>
 
     <h3><strong>uTube!</strong></h3>
     <br><br>
