--- a/csdhcel.html
+++ b/csdhcel.html
@@ -38,7 +38,10 @@
     <h3><strong>uTube!</strong></h3>
     <br><br>
     <div id="text-inputVideo"><input type="text" title="uTube Link" id="inputTextVideo" placeholder="enter youtube video link here" value="https://youtu.be/vQUCSHUlN-k"></div>
-    <br><br>
+    <br>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/EngW7tLk6R8" id="iframe1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <br>
     
     <br>
     <div id="text-inputImg"><input type="text" title="uTube Link" id="inputTextImg" placeholder="enter youtube video link here" value="http://www.google.com/intl/en_com/images/logo_plain.png"></div>
@@ -64,17 +67,12 @@
             var src = document.getElementById("headerImg");
             src.appendChild(img);
 
-            var iframe = document.createElement("iframe");
-            iframe.src =inputTextVideo.value;
-            iframe.width="560";
-            iframe.height="315";
-            iframe.title="YouTube video player";
-            iframe.frameborder="0";
-            iframe.allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture";
+            //var iframe = document.createElement("iframe");
+            iframe1.src =inputTextVideo.value;
+
             //iframe.allowfullscreen
             var src = document.getElementById("headerVideo");
-            src.appendChild(iframe);
-            //    <iframe width="560" height="315" src="https://www.youtube.com/embed/EngW7tLk6R8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            src.appendChild(iframe1);
 
             const textInput = inputTextImg.value;
             
