--- a/csdhcel.html
+++ b/csdhcel.html
@@ -36,19 +36,18 @@
     <div id="headerImg"></div>
 
     <h3><strong>uTube!</strong></h3>
-    <br><br>
-    <div id="text-inputVideo"><input type="text" title="uTube Link" id="inputTextVideo" placeholder="enter youtube video link here" value="https://youtu.be/vQUCSHUlN-k"></div>
+    <<br>
+    <div id="text-inputImg"><input type="text" title="Input-image link" id="inputTextImg" placeholder="enter image link here" value="http://www.google.com/intl/en_com/images/logo_plain.png"></div>
     <br>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/EngW7tLk6R8" id="iframe1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <br>
-    
     <br>
-    <div id="text-inputImg"><input type="text" title="uTube Link" id="inputTextImg" placeholder="enter youtube video link here" value="http://www.google.com/intl/en_com/images/logo_plain.png"></div>
-
+    <div id="text-inputVideo"><input type="text" title="Input-uTube Link" id="inputTextVideo" placeholder="enter youtube video link here" value="https://youtu.be/vQUCSHUlN-k"></div>
+    <br>
     <br>
     <button id="run"><strong>Scrape</strong></button>
     <br><br><br><br><br>
-    <div id="prompt-holder"></div>
+    <div id="prompt-holder">Output:</div>
 </body>
 
 <script type="module" src="https://cdn.jsdelivr.net/npm/@gradio/client@0.1.4/dist/index.min.js"></script>
