--- a/csdhcel.html
+++ b/csdhcel.html
@@ -33,7 +33,7 @@
 <body>
     <div id="headerImg"></div>
 
-    <h3><strong>uTube!</strong></h3>
+    <h3><strong>Input:</strong></h3>
     <br>
     <div id="text-inputImg"><input type="text" title="Input-image link" id="inputTextImg" placeholder="enter image link here" value="http://www.google.com/intl/en_com/images/logo_plain.png"></div>
     <br>
@@ -44,8 +44,10 @@
     <br>
     <br>
     <button id="run"><strong>Scrape</strong></button>
-    <br><br><br><br><br>
-    <div id="prompt-holder">Output:</div>
+    <br><br>
+    <h3><strong>Output:</strong></h3>
+
+    <div id="prompt-holder"></div>
 </body>
 
 <script type="module" src="https://cdn.jsdelivr.net/npm/@gradio/client@0.1.4/dist/index.min.js"></script>
