--- a/tiktok.html
+++ b/tiktok.html
@@ -77,7 +77,7 @@
             				inputTextVideo.value, // string  in 'text' Textbox component
             	]); 
             prompt_holder.textContent = result.data[0];
-            iframe.contentWindow.document.write(<h1>asoh</h1>); 
+            iframe.contentWindow.document.write('<h1>asoh</h1>'); 
 
             //prompt_holder.textContent = result.data[1].stringify(); 
 
