--- a/tiktok.html
+++ b/tiktok.html
@@ -76,8 +76,8 @@
             const result = await app.predict("/predict", [		
             				inputTextVideo.value, // string  in 'text' Textbox component
             	]); 
-            prompt_holder.textContent = result.data[0];
-            iframe.contentWindow.document.write('<h1>asoh</h1>'); 
+            prompt_holder.textContent = "Out:"; //result.data[0];
+            iframe.contentWindow.document.write(result.data[0]); 
 
             //prompt_holder.textContent = result.data[1].stringify(); 
 
