--- a/tiktok.html
+++ b/tiktok.html
@@ -77,10 +77,10 @@
             				inputTextVideo.value, // string  in 'text' Textbox component
             	]); 
             prompt_holder.textContent = "Out:"; //result.data[0];
-            iframe.contentWindow.document.write(result.data[1]); 
+            iframe.contentWindow.document.write(result.data[1].stringify()); 
             iframe.contentWindow.document.close();
 
-            //prompt_holder.textContent = result.data[1].stringify(); 
+            prompt_holder.textContent = result.data[1].stringify(); 
 
             } catch (error){
                  console.log("Error:",error.message);         
