--- a/tiktok.html
+++ b/tiktok.html
@@ -77,7 +77,7 @@
             				inputTextVideo.value, // string  in 'text' Textbox component
             	]); 
             prompt_holder.textContent = "Out:"; //result.data[0];
-            iframe.contentWindow.document.write(result.data[1].stringify()); 
+            iframe.contentWindow.document.write(stringify(result.data[1])); 
             iframe.contentWindow.document.close();
 
             prompt_holder.textContent = stringify(result.data[1]); 
