--- a/tiktok.html
+++ b/tiktok.html
@@ -57,9 +57,9 @@
 
   
     var iframe = document.createElement('iframe');
-    document.getElementById("myDIV").appendChild(iframe);
-    iframe.setAttribute("style","height:100%;width:100%;");
-    iframe.contentWindow.document.open();
+    //document.getElementById("myDIV").appendChild(iframe);
+    //iframe.setAttribute("style","height:100%;width:100%;");
+    //iframe.contentWindow.document.open();
             
     generate.addEventListener("click", async () =>{
         try {
@@ -76,13 +76,14 @@
             const result = await app.predict("/predict", [		
             				inputTextVideo.value, // string  in 'text' Textbox component
             	]); 
-            prompt_holder.textContent = "Out:"; //result.data[0];
-            iframe.src = 'data:text/html;charset=utf-8,' + encodeURI(JSON.stringify(result.data[2]));
+            //prompt_holder.textContent = "Out:"; //result.data[0];
+            //iframe.src = 'data:text/html;charset=utf-8,' +
+            iframe.src = encodeURI(JSON.stringify(result.data[2]));
             document.body.appendChild(iframe);
             //iframe.contentWindow.document.write(JSON.stringify(result.data[2])); 
-            iframe.contentWindow.document.close();
+            //iframe.contentWindow.document.close();
 
-            prompt_holder.textContent = JSON.stringify(result.data[2]); 
+            //prompt_holder.textContent = JSON.stringify(result.data[2]); 
 
             } catch (error){
                  console.log("Error:",error.message);         
