--- a/tiktok.html
+++ b/tiktok.html
@@ -56,7 +56,7 @@
     const prompt_holder = document.getElementById("prompt-holder");
 
   
-    var iframe = document.createElement('iframe');
+    //var iframe = document.createElement('iframe');
     //document.getElementById("myDIV").appendChild(iframe);
     //iframe.setAttribute("style","height:100%;width:100%;");
     //iframe.contentWindow.document.open();
@@ -76,12 +76,16 @@
             const result = await app.predict("/predict", [		
             				inputTextVideo.value, // string  in 'text' Textbox component
             	]); 
+            var iframe = document.createElement('iframe');
+
             //prompt_holder.textContent = "Out:"; //result.data[0];
-            iframe.src = 'data:text/html;charset=utf-8,' + JSON.stringify(result.data[2]));
+            //iframe.src = 'data:text/html;charset=utf-8,' + JSON.stringify(result.data[2]));
             //iframe.src = encodeURI(JSON.stringify(result.data[2]));
+            iframe.contentWindow.document.write('data:text/html;charset=utf-8,' + JSON.stringify(result.data[2])); 
+
             document.body.appendChild(iframe);
             //iframe.contentWindow.document.write(JSON.stringify(result.data[2])); 
-            //iframe.contentWindow.document.close();
+            iframe.contentWindow.document.close();
 
             //prompt_holder.textContent = JSON.stringify(result.data[2]); 
 
