--- a/tiktok.html
+++ b/tiktok.html
@@ -89,7 +89,7 @@
             //iframe.contentWindow.document.write(JSON.stringify(result.data[2])); 
             iframe.contentWindow.document.close();
 
-            //prompt_holder.textContent = JSON.stringify(result.data[2]); 
+            prompt_holder.textContent = JSON.stringify(result.data[2]); 
 
             } catch (error){
                  console.log("Error:",error.message);         
